--- a/client/job_preparation/requirements.txt
+++ b/client/job_preparation/requirements.txt
@@ -1,6 +1,8 @@
 cryptography==42.0.5
 pyOpenSSL==24.0.0
 protobuf==3.20.0
-hvac==2.1.0
-quart==0.19.4
+pyyaml==5.3.1
+pyrage==1.1.2
+paramiko==3.4.0
+scp==0.14.5
 pre-commit
