fixing wrong name for image built names

--- a/.github/workflows/build-container-prep-image.yml
+++ b/.github/workflows/build-container-prep-image.yml
@@ -2,7 +2,7 @@ name: Build and publish HPCS container preparation image
 on: [push]
 
 env:
-  IMAGE_NAME: hpcs/data-prep
+  IMAGE_NAME: hpcs/container-prep
 
 jobs:
   push:
