trying to find a workaround to spire not supporting cgroupv2

--- a/utils/agent-on-the-fly.conf
+++ b/utils/agent-on-the-fly.conf
@@ -24,7 +24,12 @@ plugins {
     }
 
     WorkloadAttestor "unix" {
-        plugin_data {}
+        plugin_data {
+            discover_workload_path = true
+        }
+    }
+        
+    WorkloadAttestor "systemd" {
     }
 
     WorkloadAttestor "docker" {
