--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ client/container_preparation/input_logic/age filter=lfs diff=lfs merge=lfs -text
 client/container_preparation/input_logic/curl filter=lfs diff=lfs merge=lfs -text
 client/container_preparation/input_logic/jq filter=lfs diff=lfs merge=lfs -text
 client/container_preparation/input_logic/tar filter=lfs diff=lfs merge=lfs -text
+# encrypted terraform secrets
+terraform/secrets/** filter=git-crypt diff=git-crypt
