--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,14 +4,18 @@ FROM --platform=$BUILDPLATFORM python:3.9-alpine
 
 # Install necessary packages and spire-agent
 RUN apk add --no-cache \
-    git=2.43.0-r0 \
+    git=2.45.2-r0 \
+    curl=8.11.0-r2 \
     build-base=0.5-r3 \
-    openssl=3.1.4-r5 && \
-wget -q https://github.com/spiffe/spire/releases/download/v1.9.0/spire-1.9.0-linux-amd64-musl.tar.gz && \
-tar xvf spire-1.9.0-linux-amd64-musl.tar.gz ; mv spire-1.9.0 /opt ; mv /opt/spire-1.9.0 /opt/spire && \
-ln -s /opt/spire/bin/spire-agent /usr/bin/spire-agent && \
-ln -s /opt/spire/bin/spire-server /usr/bin/spire-server && \
-rm -rf spire-1.9.0-linux-amd64-musl.tar.gz
+    openssl=3.3.2-r1
+# Install spire-agent
+RUN curl -LsSf -o spire-1.9.0-linux-amd64-musl.tar.gz https://github.com/spiffe/spire/releases/download/v1.9.0/spire-1.9.0-linux-amd64-musl.tar.gz && \
+    tar xvf spire-1.9.0-linux-amd64-musl.tar.gz && \
+    mv spire-1.9.0 /opt && \
+    mv /opt/spire-1.9.0 /opt/spire && \
+    ln -s /opt/spire/bin/spire-agent /usr/bin/spire-agent && \
+    ln -s /opt/spire/bin/spire-server /usr/bin/spire-server && \
+    rm -rf spire-1.9.0-linux-amd64-musl.tar.gz
 
 # Copy server
 COPY ./server /server
@@ -21,7 +25,7 @@ WORKDIR /server
 
 # Install dependencies
 RUN pip install --no-cache-dir -r ./requirements.txt && \
-pip install --no-cache-dir git+https://github.com/HewlettPackard/py-spiffe.git@3640af9d6629c05e027f99010abc934cb74122a8
+    pip install --no-cache-dir git+https://github.com/HewlettPackard/py-spiffe.git@3640af9d6629c05e027f99010abc934cb74122a8
 
 # Copy utils
 COPY ./utils /server/utils
