Build images only for pull-request and merges

--- a/.github/workflows/build-job-prep-image.yml
+++ b/.github/workflows/build-job-prep-image.yml
@@ -1,5 +1,11 @@
 name: Build and publish HPCS job preparation image
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types:
+      - opened
 
 env:
   IMAGE_NAME: hpcs/job-prep
