--- a/.github/workflows/build-data-prep-image.yml
+++ b/.github/workflows/build-data-prep-image.yml
@@ -1,5 +1,11 @@
 name: Build and publish HPCS data preparation image
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types:
+      - opened
 
 env:
   IMAGE_NAME: hpcs/data-prep
