Add possibility to deploy dev instances of the kind VM; Firewall fix
Remove a dev specific fierwall rule

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 
 # terraform
 .terraform*
+## local variables
+terraform/*.tfvars
 ## user specific secrets
 terraform/secrets/public_keys
 terraform/secrets/tunnel_keys
