--- a/k8s/hpcs-stack/charts/hpcs-server/templates/hpcs-server-service.yaml
+++ b/k8s/hpcs-stack/charts/hpcs-server/templates/hpcs-server-service.yaml
@@ -2,13 +2,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: spire-oidc
-  namespace: hpcs
+  name: hpcs-server
 spec:
-  type: LoadBalancer
+  clusterIP: None
   selector:
-    app: spire-server
+    app: hpcs-server
   ports:
     - name: https
-      port: 443
-      targetPort: hpcs-nginx
+      port: {{ .Values.server.port }}
+      targetPort: hpcs-server
