--- a/k8s/hpcs-stack/charts/spire-server/templates/spire-oidc-configmap.yaml
+++ b/k8s/hpcs-stack/charts/spire-server/templates/spire-oidc-configmap.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: spire-oidc
-  namespace: hpcs
 data:
   oidc-discovery-provider.conf: |
-    log_level = "debug"
+    log_level = "{{ .Values.oidc.logLevel }}"
     domains = ["spire-oidc"]
     listen_socket_path = "/tmp/spire-server/private/oidc-api.sock"
 
