--- a/k8s/hpcs-stack/charts/spire-server/templates/spire-server-configmap.yaml
+++ b/k8s/hpcs-stack/charts/spire-server/templates/spire-server-configmap.yaml
@@ -1,29 +1,25 @@
 apiVersion: v1
-
 kind: ConfigMap
 metadata:
   name: spire-bundle
-  namespace: hpcs
-
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: spire-server
-  namespace: hpcs
 data:
   server.conf: |
     server {
-      bind_address = "0.0.0.0"
-      bind_port = "8081"
+      bind_address = "{{ .Values.server.bindAddress }}"
+      bind_port = "{{ .Values.server.port }}"
       socket_path = "/tmp/spire-server/private/api.sock"
-      trust_domain = "hpcs"
+      trust_domain = "{{ .Values.server.trustDomain }}"
       data_dir = "/run/spire/data"
-      log_level = "DEBUG"
-      ca_key_type = "rsa-2048"
+      log_level = "{{ .Values.server.logLevel }}"
+      ca_key_type = "{{ .Values.server.caKeyType }}"
 
       jwt_issuer = "spire-server"
-      default_jwt_svid_ttl = "1h"
+      default_jwt_svid_ttl = "{{ .Values.server.defaultJWTttl }}"
 
       ca_subject = {
         country = ["US"],
@@ -43,7 +39,7 @@ data:
       NodeAttestor "k8s_psat" {
         plugin_data {
           clusters = {
-            "docker-desktop" = {
+            "{{ .Values.server.clusterName }}" = {
               use_token_review_api_validation = true
               service_account_allow_list = ["hpcs:hpcs-server"]
             }
@@ -59,15 +55,15 @@ data:
 
       Notifier "k8sbundle" {
         plugin_data {
-            namespace = "hpcs"
+            namespace = "{{ .Release.Namespace }}"
         }
       }
     }
 
     health_checks {
       listener_enabled = true
-      bind_address = "0.0.0.0"
-      bind_port = "8080"
+      bind_address = "{{ .Values.server.health.bindAddress }}"
+      bind_port = "{{ .Values.server.health.port }}"
       live_path = "/live"
       ready_path = "/ready"
     }
