--- a/k8s/hpcs-stack/charts/spire-server/templates/spire-server-nginx-configmap.yaml
+++ b/k8s/hpcs-stack/charts/spire-server/templates/spire-server-nginx-configmap.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: hpcs-nginx
-  namespace: hpcs
 data:
   nginx.conf: |
     events {}
@@ -15,7 +14,7 @@ data:
       }
 
       server{
-        listen 443 ssl;
+        listen {{ .Values.oidc.port }} ssl;
         ssl_certificate /certs/selfsigned.crt;
         ssl_certificate_key /certs/selfsigned.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
