--- a/k8s/hpcs-stack/values.yaml
+++ b/k8s/hpcs-stack/values.yaml
@@ -1,7 +1,10 @@
-spire-server:
+spire:
   oidc:
     logLevel: debug
     port: 443
+    service:
+      type: NodePort
+      port: 30001
   server:
     image:
       repository: ghcr.io/spiffe
@@ -20,7 +23,10 @@ spire-server:
       bindAddress: "0.0.0.0"
       port: 8080
     storageSize: "1G"
-hpcs-server:
+    service:
+      type: NodePort
+      port: 30002
+hpcs:
   image:
     repository: ghcr.io/cscfi/hpcs
     # tag of the image, defaults to .Chart.AppVersion
@@ -43,3 +49,9 @@ hpcs-server:
       port: 8081
     clusterName: hpcs
   storageSize: "1Gi"
+  service:
+    type: NodePort
+    port: 30003
+vaultService:
+  present: true
+  nodePort: 30004
