Update ansible deployment

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ terraform/*.tfvars
 ## user specific secrets
 terraform/secrets/public_keys
 terraform/secrets/tunnel_keys
+
+# Ignore certificates and keys
+*.crt
+*.csr
+*.key
