--- a/k8s/hpcs-stack/charts/spire/templates/spire-server-cluster-role.yaml
+++ b/k8s/hpcs-stack/charts/spire/templates/spire-server-cluster-role.yaml
@@ -20,6 +20,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: spire-server
+  namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: spire-server-trust-role
