--- a/k8s/hpcs-stack/charts/spire/templates/spire-server-nginx-configmap.yaml
+++ b/k8s/hpcs-stack/charts/spire/templates/spire-server-nginx-configmap.yaml
@@ -15,8 +15,8 @@ data:
 
       server{
         listen {{ .Values.oidc.port }} ssl;
-        ssl_certificate /certs/selfsigned.crt;
-        ssl_certificate_key /certs/selfsigned.key;
+        ssl_certificate /certs/tls.crt;
+        ssl_certificate_key /certs/tls.key;
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers HIGH:!aNULL:!MD5;
         location / {
